@@ -10,14 +10,18 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import com.backend.coapp.dto.request.CreateApplicationRequest;
 import com.backend.coapp.dto.request.UpdateApplicationRequest;
 import com.backend.coapp.dto.response.ApplicationResponse;
-import com.backend.coapp.exception.*;
+import com.backend.coapp.exception.application.*;
+import com.backend.coapp.exception.company.CompanyNotFoundException;
 import com.backend.coapp.model.document.UserModel;
 import com.backend.coapp.model.enumeration.ApplicationStatus;
+import com.backend.coapp.model.enumeration.RequestErrorCode;
 import com.backend.coapp.service.ApplicationService;
 import com.backend.coapp.service.JwtService;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -25,13 +29,14 @@ import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import tools.jackson.databind.ObjectMapper;
 
 @WebMvcTest(ApplicationController.class)
 @AutoConfigureMockMvc(addFilters = false)
-public class ApplicationControllerTest {
+class ApplicationControllerTest {
 
   @Autowired private MockMvc mockMvc;
   @Autowired private ObjectMapper objectMapper;
@@ -44,39 +49,42 @@ public class ApplicationControllerTest {
   private CreateApplicationRequest createRequest;
   private UpdateApplicationRequest updateRequest;
 
+  private final LocalDate date = LocalDate.of(2800, 1, 1);
+  private final LocalDateTime datetime = LocalDateTime.of(2800, 1, 1, 12, 0, 0);
+
   @BeforeEach
-  public void setUp() {
+  void setUp() {
     UserModel mockUser = mock(UserModel.class);
     when(mockUser.getId()).thenReturn("user1");
     when(mockUser.getFirstName()).thenReturn("John");
     when(mockUser.getLastName()).thenReturn("Doe");
 
-    // Match the constructor order: applicationId, companyId, jobTitle, status, applicationDeadline,
-    // jobDescription, numPositions, sourceLink, dateApplied, notes
     this.mockResponse =
         new ApplicationResponse(
             "app789",
             "comp456",
             "Software Engineer",
             ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
+            date,
             "Great role",
             1,
             "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
-            "I think it's not that good.");
+            date,
+            "I think it's not that good.",
+            datetime);
 
     this.createRequest =
         CreateApplicationRequest.builder()
             .companyId("comp456")
             .jobTitle("Software Engineer")
             .status(ApplicationStatus.APPLIED)
-            .applicationDeadline(LocalDate.of(2024, 1, 1))
+            .applicationDeadline(date)
             .jobDescription("Great role")
             .numPositions(1)
             .sourceLink("https://linkedin.com")
-            .dateApplied(LocalDate.of(2024, 1, 1))
+            .dateApplied(date)
             .notes("I think it's not that good.")
+            .interviewDateTime(datetime)
             .build();
 
     this.updateRequest =
@@ -84,37 +92,39 @@ public class ApplicationControllerTest {
             .companyId("comp456")
             .jobTitle("Senior Engineer")
             .status(ApplicationStatus.APPLIED)
-            .applicationDeadline(LocalDate.of(2024, 1, 1))
+            .applicationDeadline(date)
             .jobDescription("Great role")
             .numPositions(1)
             .sourceLink("https://linkedin.com")
-            .dateApplied(LocalDate.of(2024, 1, 1))
+            .dateApplied(date)
             .notes("Updated notes.")
+            .interviewDateTime(datetime)
             .build();
 
     when(this.authentication.getPrincipal()).thenReturn(mockUser);
   }
 
   @Test
-  public void constructor_expectSameInitInstance() {
+  void constructor_expectSameInitInstance() {
     assertEquals(this.applicationController.getApplicationService(), this.applicationService);
   }
 
   // test create application
 
   @Test
-  public void createApplication_whenValid_expect201AndApplication() throws Exception {
+  void createApplication_whenValid_expect201AndApplication() throws Exception {
     when(this.applicationService.createApplication(
-            eq("user1"),
-            eq("comp456"),
-            eq("Software Engineer"),
-            eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Great role"),
-            eq(1),
-            eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("I think it's not that good.")))
+            "user1",
+            "comp456",
+            "Software Engineer",
+            ApplicationStatus.APPLIED,
+            date,
+            "Great role",
+            1,
+            "https://linkedin.com",
+            date,
+            "I think it's not that good.",
+            datetime))
         .thenReturn(this.mockResponse);
 
     mockMvc
@@ -132,20 +142,21 @@ public class ApplicationControllerTest {
 
     verify(this.applicationService, times(1))
         .createApplication(
-            eq("user1"),
-            eq("comp456"),
-            eq("Software Engineer"),
-            eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Great role"),
-            eq(1),
-            eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("I think it's not that good."));
+            "user1",
+            "comp456",
+            "Software Engineer",
+            ApplicationStatus.APPLIED,
+            date,
+            "Great role",
+            1,
+            "https://linkedin.com",
+            date,
+            "I think it's not that good.",
+            datetime);
   }
 
   @Test
-  public void createApplication_whenCompanyNotFound_expect404() throws Exception {
+  void createApplication_whenCompanyNotFound_expect404() throws Exception {
     when(this.applicationService.createApplication(
             anyString(),
             anyString(),
@@ -153,10 +164,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDateTime.class)))
         .thenThrow(new CompanyNotFoundException());
 
     mockMvc
@@ -171,7 +183,33 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void createApplication_whenApplicationAlreadyExists_expect409() throws Exception {
+  void createApplication_whenInvalidIntegerValue_expect400WithFieldMessage() throws Exception {
+    String invalidIntJson =
+        """
+        {
+            "companyId": "someCompanyId",
+            "jobTitle": "Software Engineer",
+            "status": "APPLIED",
+            "applicationDeadline": "2024-01-01",
+            "numPositions": "notANumber"
+        }
+        """;
+
+    mockMvc
+        .perform(
+            post("/api/application")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(invalidIntJson)
+                .principal(this.authentication))
+        .andExpect(status().isBadRequest())
+        .andExpect(jsonPath("$.error").value(RequestErrorCode.INVALID_FORMAT_FIELD.name()))
+        .andExpect(jsonPath("$.message").value("Invalid value for field 'numPositions'."));
+
+    verifyNoInteractions(applicationService);
+  }
+
+  @Test
+  void createApplication_whenApplicationAlreadyExists_expect409() throws Exception {
     when(this.applicationService.createApplication(
             anyString(),
             anyString(),
@@ -179,10 +217,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDateTime.class)))
         .thenThrow(new DuplicateApplicationException("job", "comp"));
 
     mockMvc
@@ -197,7 +236,7 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void createApplication_whenMissingRequiredFields_expect400() throws Exception {
+  void createApplication_whenMissingRequiredFields_expect400() throws Exception {
     CreateApplicationRequest invalidRequest = new CreateApplicationRequest();
 
     mockMvc
@@ -216,14 +255,15 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString());
+            anyString(),
+            any(LocalDateTime.class));
   }
 
   @Test
-  public void createApplication_whenServiceFails_expect500() throws Exception {
+  void createApplication_whenServiceFails_expect500() throws Exception {
     when(this.applicationService.createApplication(
             anyString(),
             anyString(),
@@ -231,10 +271,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDateTime.class)))
         .thenThrow(new ApplicationServiceFailException("Database error"));
 
     mockMvc
@@ -251,34 +292,34 @@ public class ApplicationControllerTest {
   // test update application
 
   @Test
-  public void updateApplication_whenValid_expect200AndUpdatedApplication() throws Exception {
+  void updateApplication_whenValid_expect200AndUpdatedApplication() throws Exception {
     ApplicationResponse updatedResponse =
         new ApplicationResponse(
             "app789",
             "comp456",
             "Senior Engineer",
             ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
+            date,
             "Great role",
             1,
             "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
-            "Updated notes.");
+            date,
+            "Updated notes.",
+            datetime);
 
-    // Match Service signature: userId, applicationId, newCompanyId, newJobTitle, newStatus,
-    // newDeadline...
     when(this.applicationService.updateApplication(
-            eq("user1"),
-            eq("app789"),
-            eq("comp456"),
-            eq("Senior Engineer"),
-            eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Great role"),
-            eq(1),
-            eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Updated notes.")))
+            "user1",
+            "app789",
+            "comp456",
+            "Senior Engineer",
+            ApplicationStatus.APPLIED,
+            date,
+            "Great role",
+            1,
+            "https://linkedin.com",
+            date,
+            "Updated notes.",
+            datetime))
         .thenReturn(updatedResponse);
 
     mockMvc
@@ -294,21 +335,22 @@ public class ApplicationControllerTest {
 
     verify(this.applicationService, times(1))
         .updateApplication(
-            eq("user1"),
-            eq("app789"),
-            eq("comp456"),
-            eq("Senior Engineer"),
-            eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Great role"),
-            eq(1),
-            eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
-            eq("Updated notes."));
+            "user1",
+            "app789",
+            "comp456",
+            "Senior Engineer",
+            ApplicationStatus.APPLIED,
+            date,
+            "Great role",
+            1,
+            "https://linkedin.com",
+            date,
+            "Updated notes.",
+            datetime);
   }
 
   @Test
-  public void updateApplication_whenApplicationNotFound_expect404() throws Exception {
+  void updateApplication_whenApplicationNotFound_expect404() throws Exception {
     when(this.applicationService.updateApplication(
             anyString(),
             anyString(),
@@ -317,10 +359,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDateTime.class)))
         .thenThrow(new ApplicationNotFoundException());
 
     mockMvc
@@ -335,7 +378,7 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void updateApplication_whenNotOwned_expect403() throws Exception {
+  void updateApplication_whenNotOwned_expect403() throws Exception {
     when(this.applicationService.updateApplication(
             anyString(),
             anyString(),
@@ -344,10 +387,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDateTime.class)))
         .thenThrow(new UnauthorizedApplicationAccessException("update"));
 
     mockMvc
@@ -362,7 +406,7 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void updateApplication_whenNoFieldsProvided_expect400() throws Exception {
+  void updateApplication_whenNoFieldsProvided_expect400() throws Exception {
     UpdateApplicationRequest emptyRequest = new UpdateApplicationRequest();
 
     mockMvc
@@ -382,14 +426,15 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString());
+            anyString(),
+            any(LocalDateTime.class));
   }
 
   @Test
-  public void updateApplication_whenServiceFails_expect500() throws Exception {
+  void updateApplication_whenServiceFails_expect500() throws Exception {
     when(this.applicationService.updateApplication(
             anyString(),
             anyString(),
@@ -398,10 +443,11 @@ public class ApplicationControllerTest {
             any(ApplicationStatus.class),
             any(LocalDate.class),
             anyString(),
-            any(Integer.class),
+            anyInt(),
             anyString(),
             any(LocalDate.class),
-            anyString()))
+            anyString(),
+            any(LocalDateTime.class)))
         .thenThrow(new ApplicationServiceFailException("Database error"));
 
     mockMvc
@@ -416,7 +462,7 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void updateApplication_whenNoChanges_expect400() throws Exception {
+  void updateApplication_whenNoChanges_expect400() throws Exception {
     when(this.applicationService.updateApplication(
             anyString(),
             anyString(),
@@ -425,6 +471,7 @@ public class ApplicationControllerTest {
             any(),
             any(),
             any(),
+            anyInt(),
             any(),
             any(),
             any(),
@@ -450,6 +497,7 @@ public class ApplicationControllerTest {
             any(),
             any(),
             any(),
+            anyInt(),
             any(),
             any(),
             any(),
@@ -459,8 +507,8 @@ public class ApplicationControllerTest {
   // test delete application
 
   @Test
-  public void deleteApplication_whenValid_expect200WithSuccessMessage() throws Exception {
-    doNothing().when(this.applicationService).deleteApplication(eq("app789"), eq("user1"));
+  void deleteApplication_whenValid_expect200WithSuccessMessage() throws Exception {
+    doNothing().when(this.applicationService).deleteApplication("app789", "user1");
 
     mockMvc
         .perform(
@@ -470,11 +518,11 @@ public class ApplicationControllerTest {
         .andExpect(status().isOk())
         .andExpect(jsonPath("$.message").value("Application successfully deleted."));
 
-    verify(this.applicationService, times(1)).deleteApplication(eq("app789"), eq("user1"));
+    verify(this.applicationService, times(1)).deleteApplication("app789", "user1");
   }
 
   @Test
-  public void deleteApplication_whenApplicationNotFound_expect404() throws Exception {
+  void deleteApplication_whenApplicationNotFound_expect404() throws Exception {
     doThrow(new ApplicationNotFoundException())
         .when(this.applicationService)
         .deleteApplication(anyString(), anyString());
@@ -490,7 +538,7 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void deleteApplication_whenNotOwned_expect403() throws Exception {
+  void deleteApplication_whenNotOwned_expect403() throws Exception {
     doThrow(new UnauthorizedApplicationAccessException("delete"))
         .when(this.applicationService)
         .deleteApplication(anyString(), anyString());
@@ -506,7 +554,7 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void deleteApplication_whenServiceFails_expect500() throws Exception {
+  void deleteApplication_whenServiceFails_expect500() throws Exception {
     doThrow(new ApplicationServiceFailException("Database error"))
         .when(this.applicationService)
         .deleteApplication(anyString(), anyString());
@@ -522,17 +570,17 @@ public class ApplicationControllerTest {
   }
 
   @Test
-  public void createApplication_withoutNotes_expect201() throws Exception {
+  void createApplication_withoutNotes_expect201() throws Exception {
     CreateApplicationRequest requestWithoutNotes =
         CreateApplicationRequest.builder()
             .companyId("comp456")
             .jobTitle("Software Engineer")
             .status(ApplicationStatus.APPLIED)
-            .applicationDeadline(LocalDate.of(2024, 1, 1))
+            .applicationDeadline(date)
             .jobDescription("Great role")
             .numPositions(1)
             .sourceLink("https://linkedin.com")
-            .dateApplied(LocalDate.of(2024, 1, 1))
+            .dateApplied(date)
             .build();
 
     ApplicationResponse responseWithoutNotes =
@@ -541,11 +589,12 @@ public class ApplicationControllerTest {
             "comp456",
             "Software Engineer",
             ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
+            date,
             "Great role",
             1,
             "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
+            date,
+            null,
             null);
 
     when(this.applicationService.createApplication(
@@ -553,11 +602,12 @@ public class ApplicationControllerTest {
             eq("comp456"),
             eq("Software Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(date),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(date),
+            isNull(),
             isNull()))
         .thenReturn(responseWithoutNotes);
 
@@ -577,93 +627,288 @@ public class ApplicationControllerTest {
             eq("comp456"),
             eq("Software Engineer"),
             eq(ApplicationStatus.APPLIED),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(date),
             eq("Great role"),
             eq(1),
             eq("https://linkedin.com"),
-            eq(LocalDate.of(2024, 1, 1)),
+            eq(date),
+            isNull(),
             isNull());
   }
 
+  // test get applications (filtered)
+
   @Test
-  public void updateApplication_withOnlyJobTitle_expect200() throws Exception {
-    UpdateApplicationRequest partialUpdate =
-        UpdateApplicationRequest.builder().jobTitle("Data Scientist").build();
+  @WithMockUser(username = "user1")
+  void getApplications_whenNoParams_expect200WithApplicationsAndPagination() throws Exception {
+    Map<String, Object> mockServiceResponse =
+        Map.of(
+            "applications",
+            List.of(this.mockResponse.toMap()),
+            "pagination",
+            Map.of(
+                "currentPage",
+                0,
+                "totalPages",
+                1,
+                "totalItems",
+                1L,
+                "itemsPerPage",
+                20,
+                "hasNext",
+                false,
+                "hasPrevious",
+                false));
 
-    ApplicationResponse updatedResponse =
-        new ApplicationResponse(
-            "app789",
-            "comp456",
-            "Data Scientist",
-            ApplicationStatus.APPLIED,
-            LocalDate.of(2024, 1, 1),
-            "Great role",
-            1,
-            "https://linkedin.com",
-            LocalDate.of(2024, 1, 1),
-            "I think it's not that good.");
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(0), eq(20)))
+        .thenReturn(mockServiceResponse);
 
-    // Matching Service signature order
-    when(this.applicationService.updateApplication(
+    mockMvc
+        .perform(get("/api/application"))
+        .andExpect(status().isOk())
+        .andExpect(jsonPath("$.applications[0].applicationId").value("app789"))
+        .andExpect(jsonPath("$.applications[0].jobTitle").value("Software Engineer"))
+        .andExpect(jsonPath("$.pagination.currentPage").value(0))
+        .andExpect(jsonPath("$.pagination.totalItems").value(1));
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(0), eq(20));
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getApplications_whenSearchParam_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), eq("Google"), isNull(), anyString(), anyString(), anyInt(), anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
+
+    mockMvc.perform(get("/api/application").param("search", "Google")).andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), eq("Google"), isNull(), anyString(), anyString(), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getApplications_whenStatusParam_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
             eq("user1"),
-            eq("app789"),
-            isNull(), // companyId
-            eq("Data Scientist"), // jobTitle
-            isNull(), // status
-            isNull(), // deadline
-            isNull(), // description
-            isNull(), // positions
-            isNull(), // link
-            isNull(), // dateApplied
-            isNull())) // notes
-        .thenReturn(updatedResponse);
+            isNull(),
+            eq(List.of(ApplicationStatus.APPLIED)),
+            anyString(),
+            anyString(),
+            anyInt(),
+            anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
 
-    mockMvc
-        .perform(
-            put("/api/application/app789")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(this.objectMapper.writeValueAsString(partialUpdate))
-                .principal(this.authentication))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$.jobTitle").value("Data Scientist"));
+    mockMvc.perform(get("/api/application").param("status", "APPLIED")).andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"),
+            isNull(),
+            eq(List.of(ApplicationStatus.APPLIED)),
+            anyString(),
+            anyString(),
+            anyInt(),
+            anyInt());
   }
 
   @Test
-  public void getApplications_whenValid_expect200AndApplicationList() throws Exception {
-    List<ApplicationResponse> mockList = List.of(this.mockResponse);
-
-    when(this.applicationService.getApplications(eq("user1"))).thenReturn(mockList);
+  @WithMockUser(username = "user1")
+  void getApplications_whenMultipleStatuses_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"),
+            isNull(),
+            eq(List.of(ApplicationStatus.APPLIED, ApplicationStatus.REJECTED)),
+            anyString(),
+            anyString(),
+            anyInt(),
+            anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
 
     mockMvc
-        .perform(get("/api/application").principal(this.authentication))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$[0].applicationId").value("app789"))
-        .andExpect(jsonPath("$[0].jobTitle").value("Software Engineer"));
-
-    verify(this.applicationService, times(1)).getApplications(eq("user1"));
+        .perform(get("/api/application").param("status", "APPLIED,REJECTED"))
+        .andExpect(status().isOk());
   }
 
   @Test
-  public void getApplications_whenEmpty_expect200AndEmptyList() throws Exception {
-    when(this.applicationService.getApplications(eq("user1"))).thenReturn(Collections.emptyList());
-
+  @WithMockUser(username = "user1")
+  void getApplications_whenInvalidStatus_expect400() throws Exception {
     mockMvc
-        .perform(get("/api/application").principal(this.authentication))
-        .andExpect(status().isOk())
-        .andExpect(jsonPath("$").isEmpty());
+        .perform(get("/api/application").param("status", "INVALID_STATUS"))
+        .andExpect(status().isBadRequest());
 
-    verify(this.applicationService, times(1)).getApplications(eq("user1"));
+    verify(this.applicationService, never())
+        .getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt());
   }
 
   @Test
-  public void getApplications_whenServiceFails_expect500() throws Exception {
-    when(this.applicationService.getApplications(anyString()))
+  @WithMockUser(username = "user1")
+  void getApplications_whenInvalidSortBy_expect400() throws Exception {
+    mockMvc
+        .perform(get("/api/application").param("sortBy", "invalidField"))
+        .andExpect(status().isBadRequest());
+
+    verify(this.applicationService, never())
+        .getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getApplications_whenInvalidSortOrder_expect400() throws Exception {
+    mockMvc
+        .perform(get("/api/application").param("sortOrder", "sideways"))
+        .andExpect(status().isBadRequest());
+
+    verify(this.applicationService, never())
+        .getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getApplications_whenSortParams_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), eq("dateApplied"), eq("asc"), anyInt(), anyInt()))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
+
+    mockMvc
+        .perform(get("/api/application").param("sortBy", "dateApplied").param("sortOrder", "asc"))
+        .andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), isNull(), isNull(), eq("dateApplied"), eq("asc"), anyInt(), anyInt());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getApplications_whenPaginationParams_expectPassedToService() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(2), eq(10)))
+        .thenReturn(Map.of("applications", Collections.emptyList(), "pagination", Map.of()));
+
+    mockMvc
+        .perform(get("/api/application").param("page", "2").param("size", "10"))
+        .andExpect(status().isOk());
+
+    verify(this.applicationService, times(1))
+        .getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), eq(2), eq(10));
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getApplications_whenServiceFails_expect500() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            anyString(), any(), any(), anyString(), anyString(), anyInt(), anyInt()))
         .thenThrow(new ApplicationServiceFailException("Database error"));
 
     mockMvc
-        .perform(get("/api/application").principal(this.authentication))
+        .perform(get("/api/application"))
         .andExpect(status().isInternalServerError())
         .andExpect(jsonPath("$.error").value("INTERNAL_ERROR"))
         .andExpect(jsonPath("$.message").exists());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getApplications_whenEmpty_expect200WithEmptyList() throws Exception {
+    when(this.applicationService.getFilteredApplications(
+            eq("user1"), isNull(), isNull(), anyString(), anyString(), anyInt(), anyInt()))
+        .thenReturn(
+            Map.of(
+                "applications",
+                Collections.emptyList(),
+                "pagination",
+                Map.of(
+                    "currentPage",
+                    0,
+                    "totalPages",
+                    0,
+                    "totalItems",
+                    0L,
+                    "itemsPerPage",
+                    20,
+                    "hasNext",
+                    false,
+                    "hasPrevious",
+                    false)));
+
+    mockMvc
+        .perform(get("/api/application"))
+        .andExpect(status().isOk())
+        .andExpect(jsonPath("$.applications").isEmpty())
+        .andExpect(jsonPath("$.pagination.totalItems").value(0));
+  }
+
+  // test get interview applications
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getInterviewApplications_whenNoParams_expect200WithApplications() throws Exception {
+    ApplicationResponse interviewResponse =
+        new ApplicationResponse(
+            "appInterview",
+            "comp456",
+            "Interview Role",
+            ApplicationStatus.INTERVIEWING,
+            date,
+            "Great role",
+            1,
+            "https://linkedin.com",
+            date,
+            "I think it's not that good.",
+            datetime);
+
+    when(this.applicationService.getInterviewApplications(eq("user1"), isNull(), isNull()))
+        .thenReturn(List.of(interviewResponse));
+
+    mockMvc
+        .perform(get("/api/application/interviews"))
+        .andExpect(status().isOk())
+        .andExpect(jsonPath("$[0].jobTitle").value("Interview Role"))
+        .andExpect(jsonPath("$[0].status").value("INTERVIEWING"));
+
+    verify(this.applicationService, times(1))
+        .getInterviewApplications(eq("user1"), isNull(), isNull());
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getInterviewApplications_whenDateRangeProvided_expect200() throws Exception {
+    LocalDate start = date.minusDays(1);
+    LocalDate end = date.plusDays(1);
+
+    when(this.applicationService.getInterviewApplications("user1", start, end))
+        .thenReturn(Collections.emptyList());
+
+    mockMvc
+        .perform(
+            get("/api/application/interviews")
+                .param("startDate", start.toString())
+                .param("endDate", end.toString()))
+        .andExpect(status().isOk())
+        .andExpect(jsonPath("$").isArray());
+
+    verify(this.applicationService, times(1)).getInterviewApplications("user1", start, end);
+  }
+
+  @Test
+  @WithMockUser(username = "user1")
+  void getInterviewApplications_whenServiceFails_expect500() throws Exception {
+    when(this.applicationService.getInterviewApplications(anyString(), any(), any()))
+        .thenThrow(new ApplicationServiceFailException("DB error"));
+
+    mockMvc
+        .perform(get("/api/application/interviews"))
+        .andExpect(status().isInternalServerError())
+        .andExpect(jsonPath("$.error").value("INTERNAL_ERROR"));
   }
 }
